# python-ai-pygame

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  main.py
src/ai/: __init__.py
src/game/: __init__.py  engine.py  entities.py  scenes.py
src/utils/: __init__.py
tests/: conftest.py  test_ai.py  test_entities.py
